# popdoc

./: .env.example  .gitignore  LICENSE  LICENSE-ASSETS.md  PRIVACY.md  README.md  TERMS.md  TRADEMARK.md  package-lock.json  package.json
scripts/: brand-dmg.sh  release.sh  set-default-handlers.sh
src/: i18n.js  index.html  progress.html  settings.html
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: config.rs  credentials.rs  dedup.rs  drive.rs  i18n.rs  lib.rs  main.rs  mime_map.rs  oauth.rs  settings.rs  token_store.rs  updater.rs
