[package]
name = "popdoc"
version = "0.5.0"
description = "Double-click any Office file to open it in Google Docs"
authors = ["Guillaume Cyr <guillaume@getpopdoc.com>"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "popdoc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rand = "0.10"
url = "2"
urlencoding = "2"
dirs = "6"
sys-locale = "0.3"
once_cell = "1"
anyhow = "1"

[target.'cfg(target_os = "macos")'.dependencies]
xattr = "1"
keyring-core = "1"
apple-native-keyring-store = { version = "1", features = ["keychain"] }

[target.'cfg(target_os = "linux")'.dependencies]
xattr = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
